Replace Alfred image with hobo image

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 <div class="container">
   <div class="header">
     <div class="alfred-section">
-      <img src="./c8e9233c-b606-458b-a4e2-5c16b2696367.png" alt="Alfred" class="alfred-image">
-      <p class="alfred-name">Hi, I am Alfred</p>
+      <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
+      <p class="alfred-name">Welcome to BrokeAnt</p>
     </div>
     <div class="header-content">
       <h1>BrokeAnt Marketplace</h1>
