--- a/frontend/register.html
+++ b/frontend/register.html
@@ -187,7 +187,7 @@ document.getElementById('registerForm').addEventListener('submit', async (e) => 
   } catch (error) {
     console.error('Error:', error);
     document.getElementById('message').className = 'message error';
-    document.getElementById('message').textContent = 'An error occurred. Please try again.';
+    document.getElementById('message').textContent = 'Error: ' + error.message;
   }
 });
 </script>
