--- a/melville/index.html
+++ b/melville/index.html
@@ -420,8 +420,8 @@
     <div class="auth-sub">Unpaid visitors can browse images only.</div>
   </div>
   <div class="auth-actions">
-    <a class="btn-submit" href="/register.html">Create Account</a>
-    <a class="btn-submit btn-alt" href="/login.html">Login</a>
+    <a class="btn-submit" href="https://www.brokeant.com/register.html">Create Account</a>
+    <a class="btn-submit btn-alt" href="https://www.brokeant.com/login.html">Login</a>
   </div>
 </div>
 
@@ -564,11 +564,11 @@
   }
   
   function registerUser() {
-    window.location.href = '/register.html';
+    window.location.href = 'https://www.brokeant.com/register.html';
   }
 
   function loginUser() {
-    window.location.href = '/login.html';
+    window.location.href = 'https://www.brokeant.com/login.html';
   }
 
   function logout() {
