Improve admin city access and user city requests

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -981,7 +981,7 @@
 
 
             <button class="tab" onclick="switchTab('payments')">💰 Payments</button>
-            <button class=\"tab\" onclick=\"switchTab('cities')\">?? City Access</button>
+            <button class="tab" onclick="switchTab('cities')">City Access</button>
 
 
         </div>
