Respect login redirect from API

--- a/login.html
+++ b/login.html
@@ -157,7 +157,7 @@ document.getElementById('loginForm').addEventListener('submit', async (e) => {
       messageEl.className = 'message success';
       messageEl.textContent = 'Login successful! Redirecting...';
       setTimeout(() => {
-        window.location.href = '/index.html';
+        window.location.href = data.redirect || '/index.html';
       }, 2000);
     } else {
       messageEl.className = 'message error';
