Add Alfred greeting on home page

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
   <div class="header">
     <div class="alfred-section">
       <img src="./hobo_ChatGPT Image Jan 26, 2026, 02_51_11 PM.png" alt="Hobo" class="alfred-image">
+      <p class="alfred-name">Hi, I am Alfred</p>
       <p class="alfred-name">Welcome to BrokeAnt</p>
     </div>
     <div class="header-content">
