--- a/regina/index.html
+++ b/regina/index.html
@@ -398,6 +398,38 @@
       cursor: pointer;
       font-size: 13px;
     }
+  
+    .auth-banner {
+      margin-top: 70px;
+      background: #fff3cd;
+      border: 1px solid #ffc107;
+      border-radius: 8px;
+      padding: 12px 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 12px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    .auth-sub {
+      color: #856404;
+      font-size: 12px;
+      margin-top: 4px;
+    }
+
+    .auth-actions {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .btn-alt {
+      background: #6c757d;
+      color: #fff;
+    }
+
   </style>
 </head>
 <body>
