--- a/my-listings.html
+++ b/my-listings.html
@@ -273,6 +273,87 @@
       cursor: pointer;
     }
 
+    .modal {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.55);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+      padding: 20px;
+    }
+
+    .modal.active {
+      display: flex;
+    }
+
+    .modal-content {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      width: 100%;
+      max-width: 520px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+
+    .modal-header h3 {
+      color: #133d60;
+    }
+
+    .modal-close {
+      background: transparent;
+      border: none;
+      font-size: 22px;
+      cursor: pointer;
+      color: #666;
+    }
+
+    .modal-form .form-group {
+      margin-bottom: 12px;
+    }
+
+    .modal-form label {
+      display: block;
+      font-size: 13px;
+      color: #333;
+      margin-bottom: 6px;
+      font-weight: bold;
+    }
+
+    .modal-form input,
+    .modal-form textarea,
+    .modal-form select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+      font-size: 14px;
+    }
+
+    .modal-actions {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .btn-secondary {
+      background: #ddd;
+      color: #333;
+      border: none;
+      padding: 10px 14px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
   
     .footer-corner {
       position: fixed;
@@ -340,9 +421,62 @@
     <h2>No listings yet</h2>
     <p>Start by posting your first item to the marketplace!</p>
   </div>
+
+  <div id="editModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>Edit Listing</h3>
+        <button class="modal-close" onclick="closeEditModal()" aria-label="Close">&times;</button>
+      </div>
+      <form id="editForm" class="modal-form" onsubmit="saveEdit(event)">
+        <input type="hidden" id="editId">
+        <div class="form-group">
+          <label for="editTitle">Title</label>
+          <input type="text" id="editTitle" required maxlength="150">
+        </div>
+        <div class="form-group">
+          <label for="editDescription">Description</label>
+          <textarea id="editDescription" rows="4" required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="editPrice">Price (optional)</label>
+          <input type="number" id="editPrice" step="0.01" min="0">
+        </div>
+        <div class="form-group">
+          <label for="editCategory">Category</label>
+          <select id="editCategory" required>
+            <option value="Automotive">Automotive</option>
+            <option value="Electronics">Electronics</option>
+            <option value="Furniture">Furniture</option>
+            <option value="Home">Home</option>
+            <option value="Tools">Tools</option>
+            <option value="Clothing">Clothing</option>
+            <option value="Other">Other</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="editImageUrl">Image URL (optional)</label>
+          <input type="url" id="editImageUrl" placeholder="https://...">
+        </div>
+        <div class="form-group">
+          <label for="editStatus">Status</label>
+          <select id="editStatus" required>
+            <option value="active">Active</option>
+            <option value="sold">Sold</option>
+          </select>
+        </div>
+        <div class="modal-actions">
+          <button type="button" class="btn-secondary" onclick="closeEditModal()">Cancel</button>
+          <button type="submit" class="btn-post">Save Changes</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
 
 <script>
+let listingsById = {};
+
 // Check if user is logged in
 function checkAuth() {
   fetch('/backend/api/users.php?action=check_session', {
@@ -375,7 +509,9 @@ function loadListings() {
     
     if (data.success && data.listings.length > 0) {
       container.innerHTML = '';
+      listingsById = {};
       data.listings.forEach(listing => {
+        listingsById[listing.id] = listing;
         container.innerHTML += `
           <div class="listing-card">
             <img src="${listing.image_url || 'data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22%3E%3C/svg%3E'}" 
@@ -401,6 +537,7 @@ function loadListings() {
       emptyState.style.display = 'none';
     } else {
       container.innerHTML = '';
+      listingsById = {};
       emptyState.style.display = 'block';
     }
   });
@@ -435,7 +572,61 @@ function deleteListing(id) {
 
 // Edit listing (future feature)
 function editListing(id) {
-  alert('Edit feature coming soon!');
+  const listing = listingsById[id];
+  if (!listing) {
+    alert('Listing not found.');
+    return;
+  }
+
+  document.getElementById('editId').value = listing.id;
+  document.getElementById('editTitle').value = listing.title || '';
+  document.getElementById('editDescription').value = listing.description || '';
+  document.getElementById('editPrice').value = listing.price || '';
+  document.getElementById('editCategory').value = listing.category || 'Other';
+  document.getElementById('editImageUrl').value = listing.image_url || '';
+  document.getElementById('editStatus').value = listing.status || 'active';
+
+  document.getElementById('editModal').classList.add('active');
+}
+
+function closeEditModal() {
+  document.getElementById('editModal').classList.remove('active');
+}
+
+async function saveEdit(e) {
+  e.preventDefault();
+
+  const formData = new FormData();
+  formData.append('action', 'update');
+  formData.append('id', document.getElementById('editId').value);
+  formData.append('title', document.getElementById('editTitle').value.trim());
+  formData.append('description', document.getElementById('editDescription').value.trim());
+  formData.append('price', document.getElementById('editPrice').value.trim());
+  formData.append('category', document.getElementById('editCategory').value);
+  formData.append('image_url', document.getElementById('editImageUrl').value.trim());
+  formData.append('status', document.getElementById('editStatus').value);
+
+  const messageEl = document.getElementById('message');
+  try {
+    const response = await fetch('/backend/api/listings.php', {
+      method: 'POST',
+      body: formData,
+      credentials: 'include'
+    });
+    const data = await response.json();
+    if (data.success) {
+      messageEl.className = 'message success';
+      messageEl.textContent = 'Listing updated!';
+      closeEditModal();
+      setTimeout(loadListings, 800);
+    } else {
+      messageEl.className = 'message error';
+      messageEl.textContent = 'Error: ' + (data.message || 'Update failed');
+    }
+  } catch (err) {
+    messageEl.className = 'message error';
+    messageEl.textContent = 'Error: ' + err.message;
+  }
 }
 
 // Logout
