--- a/payment-status.html
+++ b/payment-status.html
@@ -98,9 +98,27 @@
       .footer-text { font-size: 10px; }
     }
 
-  </style>
+  
+        .top-banner {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 12px 0 6px;
+        }
+        .top-banner img {
+            width: 160px;
+            max-width: 60vw;
+            height: auto;
+        }
+
+    </style>
 </head>
 <body>
+
+  <div class="top-banner">
+    <img src="/waterhobo_ChatGPT%20Image%20Jan%2026,%202026,%2003_20_54%20PM.png" alt="BrokeAnt">
+  </div>
+
   <div class="card">
     <h1>Payment Status</h1>
     <div id="statusBox" class="status pending">Checking status...</div>
