--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1042,7 +1042,8 @@
                     <button onclick="applyUserSearch()">Search</button>
                     <button onclick="clearUserSearch()">Clear</button>
                 </div>
-                <div class="hint">E-Transfer: click “Mark Paid” after you confirm the transfer.</div>
+                <div class="hint">E-Transfer: click "Mark Paid" after you confirm the transfer.</div>
+                <div class="hint">If you want, I can also add a quick admin button to manually add a request (without needing the user action).</div>
                 <div id="usersTable" class="loading">Loading users...</div>
                 <div class="pagination" id="usersPagination"></div>
             </div>
