Fix admin City Access tab layout

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1083,6 +1083,9 @@
                 <div id="paymentsTable" class="loading">Loading payments...</div>
 
 
+            </div>
+
+
             <div id="cities" class="tab-content">
                 <h2>City Access</h2>
                 <div class="city-tools">
