--- a/index.html
+++ b/index.html
@@ -110,6 +110,46 @@
       margin-bottom: 15px;
     }
     
+    .welcome-static {
+      background: rgba(255,255,255,0.95);
+      border-radius: 14px;
+      padding: 18px 20px;
+      margin: 30px auto 20px;
+      max-width: 820px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    }
+
+    .welcome-static h3 {
+      color: #133d60;
+      margin-bottom: 8px;
+      font-size: 18px;
+    }
+
+    .welcome-static .welcome-layout {
+      display: grid;
+      grid-template-columns: 140px 1fr;
+      gap: 16px;
+      align-items: center;
+    }
+
+    .welcome-static img {
+      width: 100%;
+      max-width: 140px;
+      height: auto;
+      border-radius: 10px;
+      background: #f7f7f7;
+    }
+
+    @media (max-width: 520px) {
+      .welcome-static .welcome-layout {
+        grid-template-columns: 1fr;
+      }
+      .welcome-static img {
+        max-width: 160px;
+        margin: 0 auto;
+      }
+    }
+
     .footer {
       text-align: center;
       color: white;
@@ -517,6 +557,19 @@
   
   
   
+  
+  <div id="welcomeStatic" class="welcome-static">
+    <h3>Hi, Thanks for stopping by</h3>
+    <div class="welcome-layout">
+      <img src="/Cheerful%20ant%20on%20a%20forest%20path.png" alt="Cheerful Ant">
+      <div>
+        When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
+        <strong>Brocante</strong> - "In France, a shop or market where secondhand goods are sold". But the French pronunciation is slightly different than the English way. So that's how I got my name. <strong>Broke Ant</strong>.<br><br>
+        Happy selling and buying!!
+      </div>
+    </div>
+  </div>
+
   <div class="footer">
     <p>&copy; 2026 BrokeAnt Marketplace. All rights reserved.</p>
   </div>
